Update CSS for Contrast issue in Footer

--- a/styles/base.css
+++ b/styles/base.css
@@ -104,7 +104,7 @@ footer {
   grid-template-columns: 1fr;
   text-align: center;
   align-items: center;
-  background-color: #476762;
+  background-color: #263f3c;
 }
 
 footer p {
